--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{%block title%}{% endblock %}</title>
 
-    {% load static %}
+    {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
     {% block extraStyles %}{% endblock %}
@@ -53,7 +53,7 @@
       {% endblock %}
     </div>
 
-    {% load static %}
+    {% load staticfiles %}
     <script src="{% static 'blog/js/main.js' %}" charset="utf-8"></script>
     {% block extraScripts %}{% endblock %}
   </body>
