Realice la recuperacion de contraseña por medio del email. Se agregaron urls, templates que estan en la carpeta de registration y las variables correspondientes en settings

--- a/BlogComputacion/users/templates/users/login.html
+++ b/BlogComputacion/users/templates/users/login.html
@@ -23,7 +23,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offseft-3">
       <div class="from-group">
-        <a href="#">Olvidé mi constraseña</a>
+        <a href="{% url 'password_reset' %}">Olvidé mi constraseña</a>
         <input class = "btn btn-primary" type="submit" value = "Ingresar">
       </div>
     </div>
