--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -40,7 +40,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
+            <li><a href="{% url 'logout' %}">Salir</a></li>
             <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
             <li><a href="../navbar-fixed-top/">Fixed top</a></li>
           </ul>
@@ -51,6 +51,7 @@
       {% block content %}
         {# contenido de la pagina #}
       {% endblock %}
+
     </div>
 
     <script src="{% static 'blog/js/main.js' %}" charset="utf-8"></script>
