--- a/BlogComputacion/users/templates/users/register.html
+++ b/BlogComputacion/users/templates/users/register.html
@@ -1,9 +1,44 @@
+{% extends 'blog/main2.html' %}
+
+{% block title %} Sign Up {% endblock %}
+
 {% block content %}
 
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Guardar</button>
+  <div class="row">
+    <div class="col s12 m6 offset-m3 card">
+      <div class="input-field">
+        <label for="first_name">Nombre</label>
+        <input type="text" name="first_name" id="first_name">
+      </div>
+      <div class="input-field">
+        <label for="last_name">Apellido</label>
+        <input type="text" name="last_name" id="last_name">
+      </div>
+      <div class="input-field">
+        <label for="username">Nombre de usuario</label>
+        <input type="text" name="username" id="username">
+      </div>
+      <div class="input-field">
+        <label for="email">Correo</label>
+        <input type="email" name="email" id="email">
+      </div>
+      <div class="input-field">
+        <label for="password1">Contraseña</label>
+        <input type="password" name="password1" id="password1">
+      </div>
+      <div class="input-field">
+        <label for="password2">Repetir contraseña</label>
+        <input type="password" name="password2" id="password2">
+      </div>
+      <br><br>
+
+
+      <button type="submit" class="btn blue">Registrarse</button>
+      <br><br><br>
+    </div>
+  </div>
 </form>
 
-{% endblock %} 
+{% endblock %}
