Acomode unos links de logout que no servian

--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -32,7 +32,7 @@
       <li><a href="#!">Mis posts</a></li>
       <li><a href="#!">Escribir Post</a></li>
       <li class="divider"></li>
-      <li><a href="#!">Log out</a></li>
+      <li><a href="{% url 'logout' %}">Log out</a></li>
     </ul>
 
     <nav class="transparent main-nav" role="navigation">
@@ -50,9 +50,12 @@
         <ul id="nav-mobile" class="side-nav">
           <li><a href="{% url 'contact' %}">Contactanos</a></li>
           <li><a href="{% url 'showAll' %}">Todos los posts</a></li>
+          {% if not user.is_authenticated %}
           <li><a href="{% url 'registrar' %}">Sign Up</a></li>
           <li><a href="{% url 'login' %}">Log In</a></li>
+          {% else %}
           <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Mi cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
+          {% endif %}
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
