--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -8,25 +8,25 @@ html
 overflow: hidden;
 }
 
+.chip
+{
+  text-transform: uppercase;
+  border-radius:10px;
+}
 
 
 .brand-logo
 {
-  font-family: "Space Mono";
+  font-family: "Montserrat";
 }
 
 
 h1, h2, h3, h4, h5, h6, .card-title
 {
   font-family: "Montserrat";
-  /*font-weight:bold;*/
+  font-weight:700;
 }
 
-img
-{
-  width:100%;
-  height:100%;
-}
 
 nav.main-nav
 {
@@ -60,7 +60,7 @@ nav.main-nav
 
 .banner-content
 {
-  padding-top:20vh;
+  padding-top:15vh;
   color:white;
   text-align: center;
   position:relative;
@@ -80,7 +80,7 @@ nav.main-nav
 .categorias .chip
 {
   background: inherit;
-  color:rgb(193, 193, 193);
+  color:rgb(142, 142, 142);
   border:1px solid rgb(228, 228, 228);
   transition: all 0.3s ease;
   font-weight: 400;
@@ -89,8 +89,8 @@ nav.main-nav
 {
   background: inherit;
   color:white;
-  border:1px solid rgb(48, 181, 255);
-  background: rgb(48, 181, 255);
+  border:1px solid #2196F3;
+  background: #2196F3;
 }
 
 .categorias a
@@ -151,12 +151,12 @@ nav.main-nav
 
 /* label focus color */
 .input-field input[type=text]:focus + label {
-  color: lightblue;
+  color: #2196F3;
 }
 /* label underline focus color */
 .input-field input[type=text]:focus {
-  border-bottom: 1px solid lightblue;
-  box-shadow: 0 1px 0 0 lightblue;
+  border-bottom: 1px solid #2196F3;
+  box-shadow: 0 1px 0 0 #2196F3;
 }
 /* valid color */
 .input-field input[type=text].valid {
@@ -170,19 +170,19 @@ nav.main-nav
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: lightblue;
+  color: #2196F3;
 }
 
 
 
 
 .input-field input[type=password]:focus + label {
-  color: lightblue;
+  color: #2196F3;
 }
 /* label underline focus color */
 .input-field input[type=password]:focus {
-  border-bottom: 1px solid lightblue;
-  box-shadow: 0 1px 0 0 lightblue;
+  border-bottom: 1px solid #2196F3;
+  box-shadow: 0 1px 0 0 #2196F3;
 }
 /* valid color */
 .input-field input[type=password].valid {
@@ -196,4 +196,70 @@ nav.main-nav
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: lightblue;
+  color: #2196F3;
+}
+
+.materialize-textarea:focus + label {
+  color: #2196F3 !important;
+}
+/* label underline focus color */
+.materialize-textarea:focus {
+  border-bottom: 1px solid #2196F3 !important;
+  box-shadow: 0 1px 0 0 #2196F3 !important;
+}
+/* valid color */
+.materialize-textarea.valid {
+  border-bottom: 1px solid lightgreen !important;
+  box-shadow: 0 1px 0 0 lightgreen !important;
+}
+/* invalid color */
+.materialize-textarea.invalid {
+  border-bottom: 1px solid tomato !important;
+  box-shadow: 0 1px 0 0 tomato !important;
+}
+/* icon prefix focus color */
+.prefix.active {
+  color: #2196F3;
+}
+
+
+
+.sidebar
+{
+  padding-left: 20px;
+}
+
+.section-title
+{
+  font-size: 20px;
+}
+
+.image-cropper {
+    width: 90px;
+    height: 90px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-top:10px;
+}
+
+img {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
+
+
+.btn-small {
+    height: 27px;
+    line-height: 24px;
+    padding: 0 1rem;
+}
+
+
+.categorias-populares .chip
+{
+  font-size:15px;
+  margin:10px;
+}
