--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+
     <title>Blog | {%block title%}{% endblock %}</title>
 
     <link href="https://fonts.googleapis.com/css?family=Antic|Crimson+Text|Raleway|Space+Mono|Work+Sans|Montserrat" rel="stylesheet">
@@ -38,11 +40,15 @@
     <nav class="transparent main-nav" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo">Logo</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="{% url 'contact' %}">Contactanos</a></li>
-          <li><a href="{% url 'showAll' %}">Todos los posts</a></li>
+          <li><a href="{% url 'contact' %}"><i class="fa fa-envelope" aria-hidden="true"></i>
+ Contactanos</a></li>
+          <li><a href="{% url 'showAll' %}"><i class="fa fa-list" aria-hidden="true"></i>
+ Todos los posts</a></li>
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'registrar' %}">Sign Up</a></li>
-          <li><a href="{% url 'login' %}">Log In</a></li>
+          <li><a href="{% url 'registrar' %}"><i class="fa fa-user-plus" aria-hidden="true"></i>
+ Sign Up</a></li>
+          <li><a href="{% url 'login' %}"><i class="fa fa-sign-in" aria-hidden="true"></i>
+ Log In</a></li>
           {% else %}
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Mi cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
           {% endif %}
@@ -79,7 +85,7 @@
 
     <div class="section"></div>
 
-    <div class="container">
+    <div class="container main">
       {% block content %}
         {# contenido de la pagina #}
       {% endblock %}
