--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -46,7 +46,7 @@
 <div class="section">
   <div class="row">
     <div class="col s12 m8 cards-container">
-      <div class="card">
+      <div class="card z-depth-2">
         <div class="card-image">
           <img src="{% static 'blog/img/django.jpg' %}">
           </div>
@@ -64,13 +64,13 @@
         </div>
         <div class="card-action">
           <div class="row">
-            <div class="col s4"><a href="#" class="blue-text">Leer</a></div>
+            <div class="col s4"><a href="#" class="">  <button class="btn btn-small waves-effect waves-light blue" type="submit" name="action">Leer</button></a></div>
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-eye"></i> 320</div>
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 3</div>
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card z-depth-2">
         <div class="card-image">
           <img src="{% static 'blog/img/redes.jpg' %}">
           </div>
@@ -88,14 +88,14 @@
         </div>
         <div class="card-action">
           <div class="row">
-            <div class="col s4"><a href="#" class="blue-text">Leer</a></div>
+            <div class="col s4"><a href="#" class="">  <button class="btn btn-small waves-effect waves-light blue" type="submit" name="action">Leer</button></a></div>
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-eye"></i> 2.1k</div>
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 50</div>
           </div>
         </div>
       </div>
 
-       <div class="card">
+       <div class="card z-depth-2">
          <div class="card-image">
            <img src="{% static 'blog/img/unity.jpg' %}">
          </div>
@@ -113,14 +113,14 @@
          </div>
          <div class="card-action">
            <div class="row">
-             <div class="col s4"><a href="#" class="blue-text">Leer</a></div>
+             <div class="col s4"><a href="#" class="">  <button class="btn btn-small waves-effect waves-light blue" type="submit" name="action">Leer</button></a></div>
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-eye"></i> 1.5k</div>
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 30</div>
            </div>
          </div>
        </div>
 
-       <div class="card">
+       <div class="card z-depth-2">
          <div class="card-image">
            <img src="{% static 'blog/img/r.png' %}">
          </div>
@@ -138,7 +138,7 @@
          </div>
          <div class="card-action">
            <div class="row">
-             <div class="col s4"><a href="#" class="blue-text">Leer</a></div>
+             <div class="col s4"><a href="#" class="">  <button class="btn btn-small waves-effect waves-light blue" type="submit" name="action">Leer</button></a></div>
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-eye"></i> 1.5k</div>
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 30</div>
            </div>
@@ -146,6 +146,124 @@
        </div>
     </div>
     <div class="col s12 m4">
+      <div class="sidebar">
+        <div class="popular-posts">
+          <h3 class="section-title">Posts Populares</h3>
+          <div class="section">
+            <div class="row popular-post">
+              <div class="col s3 m12 l3">
+                <div class="image-cropper z-depth-3">
+                  <img src="{% static 'blog/img/django.jpg' %}" alt="" >
+                </div>
+              </div>
+              <div class="col s9 m12 l9">
+                <div class="tags">
+                  <div class="chip z-depth-1">Django</div>
+                  <div class="chip z-depth-1">Python</div>
+                  <div class="chip z-depth-1">Framework</div>
+                </div>
+                <h5>Migraciones con Django</h5>
+              </div>
+            </div>
+            <div class="divider"></div>
+          </div>
+          <div class="section">
+            <div class="row popular-post">
+              <div class="col s3 m12 l3">
+                <div class="image-cropper z-depth-3">
+                  <img src="{% static 'blog/img/redes.jpg' %}" alt="" >
+                </div>
+              </div>
+              <div class="col s9 m12 l9">
+                <div class="tags">
+                  <div class="chip z-depth-1">IA</div>
+                  <div class="chip z-depth-1">Python</div>
+                  <div class="chip z-depth-1">Avanzado</div>
+                </div>
+                <h5>Redes Neuronales en Python</h5>
+              </div>
+            </div>
+            <div class="divider"></div>
+
+          </div>
+
+          <div class="section">
+            <div class="row popular-post">
+              <div class="col s3 m12 l3">
+                <div class="image-cropper z-depth-3">
+                  <img src="{% static 'blog/img/unity.jpg' %}" alt="" >
+                </div>
+              </div>
+              <div class="col s9 m12 l9">
+                <div class="tags">
+                  <div class="chip z-depth-1">Unity</div>
+                  <div class="chip z-depth-1">Videojuegos</div>
+                </div>
+                <h5>Desarrollo de Videojuegos en Unity</h5>
+              </div>
+            </div>
+            <div class="divider"></div>
+
+          </div>
+
+        <br>
+        </div>
+        <div class="motivacion card blue white-text">
+          <div class="card-content">
+            <h3 class="text-center">
+              Motivacion
+            </h3>
+            <p>
+              Esta pagina surgio como un proyecto para ayudar en la universidad a los estudiantes de los primeros semestres a tener un poco de contacto con la carrera a traves de pequeños tutoriales o tips de diversos temas, principalmente de los que podiamos aportar algo, como lo son Desarrollo web, lenguajes de programacion como C, C++, python, etc.
+            </p>
+            <br>
+            <p>
+              Ya que este fue un proyecto que desarrollamos estando en el 4to (cuarto) semestre, es muy probable que tenga cosas mejorables y algunos errores, estamos abiertos a sugerencias o criticas constructivas, haznos saber tu opinion. <i class="fa fa-smile-o" aria-hidden="true"></i>
+            </p>
+            <br>
+            <span class="card-title activator blue-text text-darken-3">Escribenos <i class="fa fa-pencil right" aria-hidden="true"></i></span>
+
+          </div>
+          <div class="card-reveal black-text">
+            <span class="card-title grey-text text-darken-4">Escribenos <i class="fa fa-pencil right" aria-hidden="true"></i></span>
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <br>
+                  <br>
+                  <textarea id="mensaje" name="mensaje" class="materialize-textarea"></textarea>
+                  <label for="mensaje">Sugerencia</label>
+                  <button type="submit" name="button" class="btn blue">enviar</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <br>
+        <div class="categorias-populares">
+          <h3 class="section-title">Categorias Populares</h3>
+
+          <div class="chip z-depth-1">IA</div>
+          <div class="chip z-depth-1">Python</div>
+          <div class="chip z-depth-1">Avanzado</div>
+          <div class="chip z-depth-1">Framework</div>
+          <div class="chip z-depth-1">Django</div>
+          <div class="chip z-depth-1">Teoria</div>
+          <div class="chip z-depth-1">C</div>
+          <div class="chip z-depth-1">Java</div>
+          <div class="chip z-depth-1">Javascript</div>
+          <div class="chip z-depth-1">Laravel</div>
+          <div class="chip z-depth-1">Php</div>
+          <div class="chip z-depth-1">Atom</div>
+          <div class="chip z-depth-1">Sublime</div>
+          <div class="chip z-depth-1">Servidores</div>
+          <div class="chip z-depth-1">DB</div>
+          <div class="chip z-depth-1">Nodejs</div>
+          <div class="chip z-depth-1">Html</div>
+          <div class="chip z-depth-1">React</div>
+
+        </div>
+      </div>
     </div>
     </div>
   </div>
