--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -26,7 +26,8 @@
       <li><a href="#!">Mis posts</a></li>
       <li><a href="#!">Escribir Post</a></li>
       <li class="divider"></li>
-      <li><a href="{% url 'logout' %}">Log out</a></li>
+      <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+ Log out</a></li>
     </ul>
 
     <ul id="dropdown2" class="dropdown-content">
@@ -34,7 +35,8 @@
       <li><a href="#!">Mis posts</a></li>
       <li><a href="#!">Escribir Post</a></li>
       <li class="divider"></li>
-      <li><a href="{% url 'logout' %}">Log out</a></li>
+      <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+ Log out</a></li>
     </ul>
 
     <nav class="transparent main-nav" role="navigation">
@@ -91,6 +93,33 @@
       {% endblock %}
 
     </div>
+
+
+    <footer class="page-footer grey darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright grey darken-4">
+        <div class="container center">
+        Blog de Computacion &copy; 2017
+        </div>
+      </div>
+    </footer>
+
 
     <script src="{% static 'blog/js/jquery-3.2.1.min.js' %}" charset="utf-8"></script>
     <script src="{% static 'blog/js/materialize.min.js' %}" charset="utf-8"></script>
