Agregue logo e idea de nombre, falta centrarlo en pantallas pequeñas

--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -40,7 +40,7 @@
     </ul>
 
     <nav class="transparent main-nav" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo">Logo</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo"><img src="{% static 'blog/img/logo2.png' %}" alt="" class="responsive-img"> <span class="logo-text">p entonces q</span></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="{% url 'contact' %}"><i class="fa fa-envelope" aria-hidden="true"></i>
  Contactanos</a></li>
