--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -290,7 +290,7 @@
               Ya que este fue un proyecto que desarrollamos estando en el 4to (cuarto) semestre, es muy probable que tenga cosas mejorables y algunos errores, estamos abiertos a sugerencias o criticas constructivas, haznos saber tu opinion. <i class="fa fa-smile-o" aria-hidden="true"></i>
             </p>
             <br>
-            <span class="card-title activator blue-text text-darken-3">Escribenos <i class="fa fa-pencil right" aria-hidden="true"></i></span>
+            <span class="card-title activator blue-text text-darken-3">Escribenos <span><i class="fa fa-pencil right" aria-hidden="true"></i></span>
 
           </div>
           <div class="card-reveal black-text">
