--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -8,6 +8,22 @@ html
 overflow: hidden;
 }
 
+#logo-container
+{
+  padding-top: 10px;
+  width: 70px;
+  position:relative;
+}
+
+.logo-text
+{
+  position:absolute;
+  top:45px;
+  left:-27px;
+  font-size: 20px;
+
+}
+
 .chip
 {
   text-transform: uppercase;
@@ -61,7 +77,8 @@ nav.main-nav
   width: 100%;
   height: 100%;
 
-  background: rgba(0, 0, 0, 0.49);
+  background: rgba(33, 150, 244, 0.7);
+  /*background: #2196F3;*/
 }
 
 .banner-content
