Modifique el comportamiento de la pagina al disminuir el tamaño de la pantalla, ahora se organiza mejor (en mi opinion)

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -81,10 +81,7 @@
 
 <div class="section">
   <div class="row">
-    <div class="col s12 m8 cards-container">
-
-
-
+    <div class="col s12 l8 cards-container">
 
       <div class="card z-depth-2">
         <div class="card-image">
@@ -214,18 +211,18 @@
     </div>
 
 
-    <div class="col s12 m4">
+    <div class="col s12 l4">
       <div class="sidebar">
         <div class="popular-posts">
           <h3 class="section-title">Posts Populares</h3>
           <div class="section">
             <div class="row popular-post">
-              <div class="col s3 m12 l3">
+              <div class="col s3">
                 <div class="image-cropper z-depth-3">
                   <img src="{% static 'blog/img/django.jpg' %}" alt="" >
                 </div>
               </div>
-              <div class="col s9 m12 l9">
+              <div class="col s9">
                 <div class="tags">
                   <div class="chip z-depth-1">Django</div>
                   <div class="chip z-depth-1">Python</div>
@@ -238,12 +235,12 @@
           </div>
           <div class="section">
             <div class="row popular-post">
-              <div class="col s3 m12 l3">
+              <div class="col s3">
                 <div class="image-cropper z-depth-3">
                   <img src="{% static 'blog/img/redes.jpg' %}" alt="" >
                 </div>
               </div>
-              <div class="col s9 m12 l9">
+              <div class="col s9">
                 <div class="tags">
                   <div class="chip z-depth-1">IA</div>
                   <div class="chip z-depth-1">Python</div>
@@ -258,12 +255,12 @@
 
           <div class="section">
             <div class="row popular-post">
-              <div class="col s3 m12 l3">
+              <div class="col s3">
                 <div class="image-cropper z-depth-3">
                   <img src="{% static 'blog/img/unity.jpg' %}" alt="" >
                 </div>
               </div>
-              <div class="col s9 m12 l9">
+              <div class="col s9">
                 <div class="tags">
                   <div class="chip z-depth-1">Unity</div>
                   <div class="chip z-depth-1">Videojuegos</div>
