--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -139,7 +139,7 @@ nav.main-nav
 
 .cards-container .card {
   display: inline-block;
-  overflow: visible;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
@@ -151,9 +151,9 @@ nav.main-nav
 }
 @media only screen and (min-width: 601px) {
   .cards-container {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
   }
 }
 @media only screen and (min-width: 993px) {
