--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -77,8 +77,8 @@ nav.main-nav
   width: 100%;
   height: 100%;
 
-  background: rgba(33, 150, 244, 0.7);
-  /*background: #2196F3;*/
+  /*background: rgba(33, 150, 244, 0.7);*/
+  background: #2196F3;
 }
 
 .banner-content
@@ -258,6 +258,19 @@ nav.main-nav
     overflow: hidden;
     border-radius: 50%;
     margin-top:10px;
+}
+
+.image-post
+{
+  position:relative;
+}
+
+.vistas{
+  border-radius: 35px;
+  position:absolute;
+  padding:5px;
+  top:-5px;
+  left:27px;
 }
 
 img {
