Puse nuevas imagenes para que se viera un poco mejor la idea de los posts mas populares y darle ademas otros colores a la pagina

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -203,19 +203,18 @@
             <div class="row popular-post">
               <div class="col s3 image-post">
                 <div class="image-cropper z-depth-3">
-                  <img src="{% static 'blog/img/django.jpg' %}" alt="" >
+                  <img src="{% static 'blog/img/atom.jpg' %}" alt="" >
                 </div>
                 <div class="vistas blue center white-text z-depth-3">
-                  <i class="fa fa-eye"></i> 320
+                  <i class="fa fa-eye"></i> 2.5k
                 </div>
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">Django</div>
-                  <div class="chip z-depth-1">Python</div>
-                  <div class="chip z-depth-1">Framework</div>
+                  <div class="chip z-depth-1">Herramientas</div>
+                  <div class="chip z-depth-1">Atom</div>
                 </div>
-                <h5>Migraciones con Django</h5>
+                <h5>Mejores paquetes de Atom</h5>
               </div>
             </div>
             <div class="divider"></div>
@@ -226,19 +225,18 @@
             <div class="row popular-post">
               <div class="col s3 image-post">
                 <div class="image-cropper z-depth-3">
-                  <img src="{% static 'blog/img/redes.jpg' %}" alt="" >
+                  <img src="{% static 'blog/img/nodejs.jpg' %}" alt="" >
                 </div>
                 <div class="vistas blue center white-text z-depth-3">
-                  <i class="fa fa-eye"></i> 2.1k
+                  <i class="fa fa-eye"></i> 2.3k
                 </div>
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">IA</div>
-                  <div class="chip z-depth-1">Python</div>
-                  <div class="chip z-depth-1">Avanzado</div>
+                  <div class="chip z-depth-1">Nodejs</div>
+                  <div class="chip z-depth-1">Backend</div>
                 </div>
-                <h5>Redes Neuronales en Python</h5>
+                <h5>Implementar una API basica con Nodejs</h5>
               </div>
             </div>
             <div class="divider"></div>
@@ -250,7 +248,7 @@
             <div class="row popular-post">
               <div class="col s3 image-post">
                 <div class="image-cropper z-depth-3">
-                  <img src="{% static 'blog/img/unity.jpg' %}" alt="" >
+                  <img src="{% static 'blog/img/laravel.png' %}" alt="" >
                 </div>
                 <div class="vistas blue center white-text z-depth-3">
                   <i class="fa fa-eye"></i> 1.5k
@@ -259,10 +257,10 @@
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">Unity</div>
-                  <div class="chip z-depth-1">Videojuegos</div>
+                  <div class="chip z-depth-1">Laravel</div>
+                  <div class="chip z-depth-1">Php</div>
                 </div>
-                <h5>Desarrollo de Videojuegos en Unity</h5>
+                <h5>Introduccion a Laravel <small>(organizacion de carpetas)<small></h5>
               </div>
             </div>
             <div class="divider"></div>
