Idea para el fondo de pantalla, el problema es que necesitamos otra imagen

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -260,7 +260,7 @@
                   <div class="chip z-depth-1">Laravel</div>
                   <div class="chip z-depth-1">Php</div>
                 </div>
-                <h5>Introduccion a Laravel <small>(organizacion de carpetas)</small></h5>
+                <h5>Introduccion a Laravel </h5>
               </div>
             </div>
             <div class="divider"></div>
