--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -61,7 +61,7 @@ nav.main-nav
 {
   width:100%;
   height:50vh;
-  background: url('../img/teclado.jpg') bottom;
+  background: url('../img/background.jpg') top;
   -webkit-background-size: cover;
   background-size: cover;
 
@@ -77,8 +77,8 @@ nav.main-nav
   width: 100%;
   height: 100%;
 
-  /*background: rgba(33, 150, 244, 0.7);*/
-  background: #2196F3;
+  background: rgba(0, 0, 0, 0.1);
+  /*background: #2196F3;*/
 }
 
 .banner-content
@@ -108,13 +108,18 @@ nav.main-nav
   transition: all 0.3s ease;
   font-weight: 400;
 }
-.categorias .chip.active, .categorias .chip:hover
+.categorias .chip.active, .chip:hover
 {
-  background: inherit;
-  color:white;
-  border:1px solid #2196F3;
-  background: #2196F3;
+  /*background: inherit !important;*/
+  color:white !important;
+  background: #2196F3 !important;
 }
+
+.chip
+{
+  transition: all 0.5s ease;
+}
+
 
 .categorias a
 {
