--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -67,15 +67,15 @@
 
       <div class="card z-depth-2">
         <div class="card-image">
-          <img src="{% static 'blog/img/django.jpg' %}">
-          </div>
+            <img src="{% static 'blog/img/django.jpg' %}">
+        </div>
         <div class="card-content">
           <p class="card-info grey-text">
             <small>
               <span class="left">Por Victor Ligas</span> <span class="right">4 de abril del 2016</span>
             </small>
           </p>
-          <p class="title"><h5>Migraciones en Django</h5></p>
+          <a href="#!" class="article-link"><p class="title"><h5>Migraciones en Django</h5></p></a>
           <div class="divider"></div>
           <div class="section">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quibusdam quis iusto tempore cumque similique saepe illum? Deleniti tempore nemo repellat magnam, cum reprehenderit consectetur necessitatibus quos nostrum ipsum quisquam.</p>
@@ -101,14 +101,14 @@
       <div class="card z-depth-2">
         <div class="card-image">
           <img src="{% static 'blog/img/redes.jpg' %}">
-          </div>
+        </div>
         <div class="card-content">
           <p class="card-info grey-text">
             <small>
               <span class="left">Por Crismary Castellanos</span> <span class="right">4 de abril del 2016</span>
             </small>
           </p>
-          <p class="title"><h5>Redes Neuronales con Python</h5></p>
+          <a href="#!" class="article-link"><p class="title"><h5>Redes Neuronales con Python</h5></p></a>
           <div class="divider"></div>
           <div class="section">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt beatae neque officia cum accusantium quo, consequuntur asperiores. Sed dolorum consectetur fugit illum dolor doloremque. Voluptatibus dolor, non modi maxime impedit.</p>
@@ -141,7 +141,7 @@
                <span class="left">Por David</span> <span class="right">4 de abril del 2016</span>
              </small>
            </p>
-           <p class="title"><h5>Desarrollo de Videojuegos en Unity</h5></p>
+           <a href="#!" class="article-link"><p class="title"><h5>Desarrollo de Videojuegos en Unity</h5></p></a>
            <div class="divider"></div>
            <div class="section">
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab tempora hic cum aperiam perferendis sequi, eum officiis nihil, aut, aliquid consequatur quidem necessitatibus deleniti rerum eaque neque porro cupiditate nulla!</p>
@@ -172,7 +172,7 @@
                <span class="left">Por Alvaro</span> <span class="right">4 de abril del 2016</span>
              </small>
            </p>
-           <p class="title"><h5>Introduccion a R</h5></p>
+           <a href="#!" class="article-link"><p class="title"><h5>Introduccion a R</h5></p></a>
            <div class="divider"></div>
            <div class="section">
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae molestiae odit tempore rem nostrum hic fuga inventore consequuntur dignissimos mollitia, atque quas debitis dolorum commodi. Recusandae incidunt corporis voluptatem, necessitatibus?</p>
@@ -214,7 +214,7 @@
                   <div class="chip z-depth-1">Herramientas</div>
                   <div class="chip z-depth-1">Atom</div>
                 </div>
-                <h5>Mejores paquetes de Atom</h5>
+                <a href="#!" class="article-link"><h5>Mejores paquetes de Atom</h5></a>
               </div>
             </div>
             <div class="divider"></div>
@@ -236,7 +236,7 @@
                   <div class="chip z-depth-1">Nodejs</div>
                   <div class="chip z-depth-1">Backend</div>
                 </div>
-                <h5>Implementar una API basica con Nodejs</h5>
+                <a href="#!" class="article-link"><h5>Implementar una API basica con Nodejs</h5></a>
               </div>
             </div>
             <div class="divider"></div>
@@ -260,7 +260,7 @@
                   <div class="chip z-depth-1">Laravel</div>
                   <div class="chip z-depth-1">Php</div>
                 </div>
-                <h5>Introduccion a Laravel </h5>
+                <a href="#!" class="article-link"><h5>Introduccion a Laravel </h5></a>
               </div>
             </div>
             <div class="divider"></div>
