--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -77,7 +77,7 @@ nav.main-nav
   width: 100%;
   height: 100%;
 
-  background: rgba(#2196f4, 0.88);
+  background: rgba(33, 150, 244, 0.6);
   /*background: #2196F3;*/
 }
 
